Fixed mixup in rules with react and server

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,6 +15,15 @@
         "sourceType": "module"
     },
     "rules": {
+        "react/prop-types": ["off"],
+        "react/jsx-no-bind": [
+            "error",
+            {
+                "ignoreRefs": false,
+                "allowArrowFunctions": true,
+                "allowBind": false
+            }
+        ],
         "array-bracket-spacing": "error",
         "arrow-spacing": "error",
         "comma-dangle": "error",
