--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
         "prettier-eslint": "^8.2.5"
     },
     "dependencies": {
+        "bcrypt": "^1.0.3",
         "boom": "^7.1.1",
         "bunyan": "^1.8.12",
+        "bunyan-middleware": "^0.8.0",
+        "connect-mongo": "^2.0.0",
+        "express": "^4.16.2",
+        "express-async-await": "^1.1.0",
+        "express-graphql": "^0.6.11",
+        "express-session": "^1.15.6",
+        "graphql": "^0.11.7",
         "handlebars": "^4.0.11",
-        "hapi": "^17.1.1",
-        "inert": "^5.0.1",
-        "vision": "^5.2.0"
+        "mongoose": "^4.13.6",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0"
     }
 }
