Add cors support to express

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bunyan": "^1.8.12",
         "bunyan-middleware": "^0.8.0",
         "connect-mongo": "^2.0.0",
+        "cors": "^2.8.4",
         "express": "^4.16.2",
         "express-async-await": "^1.1.0",
         "express-graphql": "^0.6.11",
