--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "apollo-client": "^2.0.4",
+        "apollo-client-preset": "^1.0.5",
+        "graphql-tag": "^2.6.0",
         "react": "^16.2.0",
+        "react-apollo": "^2.0.4",
         "react-dom": "^16.2.0",
+        "react-router-dom": "^4.2.2",
         "react-scripts": "1.0.17",
         "vision": "^5.2.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
     },
     "devDependencies": {
         "babel-eslint": "^8.0.3",
         "eslint": "^4.12.1",
         "prettier-eslint": "^8.2.5"
+    },
+    "proxy": "http://localhost:4000",
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
     }
 }
